Home Page First Section
First section on the home page added with lorem ipsum text and static images. Second section describing services in progress.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f6ff;
+}
+
 #web {
     background-color: #f4f6ff;
     max-width: 100vw;
@@ -56,11 +63,10 @@ nav {
   }
   
   nav ul li {
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-family: 'red hat display';
     font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    letter-spacing: 1.2px;
+    font-weight: 800;
+    letter-spacing: 5%;
     color: #f4f6ff;
   }
   
@@ -68,12 +74,14 @@ nav {
     color: inherit;
     font-style: inherit;
     text-decoration: none;
+    letter-spacing: 5%;
   }
   
   nav ul li a:hover {
     text-decoration: underline;
   }
 
+  /*HAMBURGER MENU STYLES*/
 
 #menu_toggle:checked ~ nav #menu_items {
   display: flex;
@@ -99,7 +107,7 @@ nav {
 }
 
 #menu_toggle:checked ~ nav {
-  background-color: #3f3f3f;
+  background-color: #10375c;
   opacity: 100%;
   width: 100vw;
   height: 100vh;
@@ -235,9 +243,9 @@ nav {
         width: inherit;
       }
     
-      nav #menu_items li {
+      nav #menu_items li a {
         font-size: 20px;
-        color: #f1eeee;
+        color: #f4f6ff;
         background-color: #10375c;
         height: fit-content;
         padding: 10px 30px;
@@ -246,6 +254,178 @@ nav {
     
       #menu_button {
         display: none;
+      }
+
+     .section_content {
+        margin: auto;
+        margin-top: 40px;
+        height: fit-content;
+        position: relative;
+        display: block;
+        max-width: 1000px;
+      }
+
+      #heading_section {
+        background-color: #f4f6ff;
+        margin: 40px 20px;
+        height: fit-content;
+      }
+
+      /*H1 STYLING*/
+
+
+      h1 {
+        font-family: 'Red Hat Display';
+        font-size: 50px;
+        letter-spacing: 5%;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        text-align: left;
+        padding-right: 25%;
+        padding-left: 15px;
+        max-width: fit-content;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        font-weight: 800;
+        display: inline-block;
+      }
+
+      .heading_section_heading {
+        background-color: #f3c623;
+        color: #10375c; 
+      }
+
+      #heading_section_copy {
+        max-width: 55%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+      }
+
+      #heading_section_copy a {
+        font-family: 'red hat display';
+        font-size: 20px;
+        color: #f4f6ff;
+        background-color: #10375c;
+        height: fit-content;
+        padding: 15px 40px;
+        width: fit-content;
+        text-decoration: none;
+        font-weight: 800;
+        margin: auto;
+        letter-spacing: 5%;
+      }
+
+      #heading_section_copy p {
+        color: #10375c;
+      }
+
+      p {
+        font-family: 'red hat display';
+        font-size: 20px;
+        text-decoration: none;
+        font-weight: 800;
+        text-align: justify;
+        letter-spacing: 5%;
+        line-height: 30px;
+        padding-left: 20px;
+      }
+
+      #heading_section_image {
+        width: 40%;
+        height: 80%;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+      }
+
+      #image_box {
+        height: 40%;
+        width: 75%;
+        background-color: #eb8317;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+
+      #image_carousel {
+        height: 100%;
+        z-index: 2;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
+      }
+
+      #image_carousel img {
+        height: inherit;
+        display: block;
+        margin: auto;
+      }
+
+      #services_section {
+        background-color: #10375c;
+        margin: auto;
+        margin-top: 40px ;
+        height: fit-content;
+      }
+
+      #services_section_heading {
+        color: #eb8317;
+        background-color: #f4f6ff;
+        margin-top: 55px;
+      }
+
+      #services_section p {
+        color: #f4f6ff;
+      }
+
+      #services_description {
+        display: flex;
+        margin: 40px auto;
+        height: fit-content;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+      }
+
+      .services_list {
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 50%;
+      }
+
+      .image_heading {
+        position: relative;
+        margin: auto;
+        width: 75%;
+        display: block;
+      }
+
+      h2 {
+        font-family: 'red hat display';
+        font-weight: 800;
+        font-size: 24px;
+        background-color: #f3c623;
+        color: #10375c;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        /*padding-right: 30%;
+        padding-left: 15px;*/
+        width: fit-content;
+        letter-spacing: 5%;
+        display: inline-block;
+        text-align: left;
+      }
+
+      .image_heading img {
+        width: 100%;
+
       }
 
 
